--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box ;
+}
+
 :root {
 
 /*==================== TOPOGRAFIA =================*/
@@ -8,16 +14,33 @@
 
 
 /*====================== CORES ====================*/
-  --texxt-primaty: #922524;
+  --text-primary: #292524;
   --text-secondary: #57534E;
   --text-tertiary: #8F8881;
   --text-highlight: #E43A12;
 
   --surface-primary: #FFFFFFFF;
-  --suface-secondary:#FEE7D6;
+  --surface-secondary:#FEE7D6;
 
   --stroke-defalt:#D6D3D1;
   --stroke-hightlight:#F3541C;
   --semantic-error: #DC2626;
 
+}
+
+
+/*================ GERAL ==============*/
+body {
+  overflow: hidden;
+  font: var(--text);
+  color: var(--text-secondary);
+}
+
+h1, h2 {
+  color: var(--text-primary);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
